# prisonbookproject

./: .dockerignore  .env.docker  .env.example  .envrc  .gitignore  CHANGELOG.md  Dockerfile  Procfile  README.md  README.rst  TRYITOUT.md  deploy_checklist.txt  docker-compose.yml  docker-entrypoint.sh  fly.dev.toml  fly.toml  manage.py  pyproject.toml  railway.toml
.github/workflows/: trigger-backup.yaml
app/: 0033_remove_letter_created_by_and_more.py  admin.py  apps.py  lookups.py  models.py  signals.py  tests.py  utils.py  views.py
app/admin/: __init__.py  letter.py  person.py  prison.py
app/fixtures/: test_db.csv
app/migrations/: 0001_initial.py  0002_inmateprison.py  0004_inmate_last_sent_inmate_package_count.py  0005_alter_inmate_options_inmate_pending_letter.py  0006_personprison_rename_inmate_person_and_more.py  0008_alter_person_options.py  0009_alter_personprison_current.py  0013_alter_letter_created_date_alter_letter_modified_date_and_more.py  0016_rename_external_id_prison_legacy_id_and_more.py  0018_merge_20220612_1633.py  0019_alter_person_options_and_more.py  0020_remove_person_last_sent_alter_letter_created_by_and_more.py  0025_remove_prison_street_address_and_more.py  0027_rename_city_prison_legacy_address_and_more.py  0028_alter_person_inmate_number.py  0035_alter_prison_modified_date.py  0039_alter_prison_prison_type.py  0042_alter_prison_mailing_address_and_more.py  0043_alter_prison_legacy_id.py  0046_letter_prison_sent_to.py  0048_alter_letter_workflow_stage.py  0049_remove_personprison_current.py  0054_alter_person_notes.py
app/models/: letter.py  person.py  prison.py
pbp/: asgi.py  settings.py  wsgi.py
prisonbookproject/: asgi.py  settings.py  settings_deployed.py  settings_local.py  urls.py
src/app/: admin_site.py  apps.py  forms.py  lookups.py  tests.py  urls.py  utils.py  views.py
src/app/admin/: __init__.py  issue.py  letter.py  person.py  prison.py  problem_note.py
src/app/fixtures/: test_db.csv  test_test_db.csv
src/app/migrations/: 0001_initial.py  0002_problemnote.py  0003_rename_inmate_id_inmate_inmate_number_and_more.py  0003_rename_notes_problemnote_note.py  0004_problemnote_modified_by_problemnote_modified_date.py  0005_letter_fulfillment_event_notes_and_more.py  0006_alter_letter_workflow_stage_issue_delete_problemnote.py  0007_person_eligibility_person_first_name_prison_city_and_more.py  0007_remove_letter_fulfillment_event_notes_and_more.py  0008_alter_letterissue_issue_alter_personissue_issue.py  0010_letter_created_by_letter_created_date_and_more.py  0011_remove_letter_updated_by_remove_person_updated_by_and_more.py  0012_alter_letter_created_date_alter_letter_modified_date_and_more.py  0014_prison_external_id.py  0017_auto_20220515_1737.py  0021_person_legacy_prison_id_alter_letter_processed_date.py  0022_person_legacy_last_served_date_and_more.py  0023_alter_letter_processed_date_alter_prison_legacy_id.py  0024_remove_letter_modified_date_person_notes_and_more.py  0026_rename_legacy_street_address_prison_street_address.py  0029_remove_letter_modified_by_remove_person_modified_by_and_more.py  0030_alter_person_created_by.py  0031_alter_letter_created_by.py  0032_letter_modified_date.py  0033_prison_modified_by.py  0034_alter_personprison_current_and_more.py  0036_rename_processed_date_letter_stage1_complete_date_and_more.py  0037_alter_letter_awaiting_fulfillment_date_and_more.py  0038_person_middle_name_person_name_suffix.py  0040_person_eligibility_bool.py  0041_remove_person_eligibility_bool_and_more.py  0044_remove_person_eligibility_status.py  0047_alter_prison_options_alter_letter_postmark_date.py  (+7 more)
src/auth/: admin.py  apps.py  models.py
src/prisonbookproject/: asgi.py  context_processors.py  settings.py  settings_deployed.py  urls.py  wsgi.py
src/templates/: base.html  header.html  message.html  messages.html
src/tests/: test_contrib.py  test_letter_admin.py  test_person_admin.py  test_prison_book_project.py
src/viz/: apps.py  urls.py  util.py  views.py
templates/admin/: base_site.html
(+46 files in other folders)
