[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "prison-book-project"
version = "0.1.0"
description = ""
authors = ["ges-na <gesinaface@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django-environ = "^0.8.1"
Django = "^5.2.1"
django-extensions = "^3.1.5"
django-import-export = "^2.8.0"
psycopg2-binary = "^2.9.3"
model-bakery = "^1.5.0"
ipdb = "^0.13.9"
django-cors-headers = "^3.13.0"
whitenoise = "^6.2.0"
gunicorn = "^20.1.0"
django-ajax-selects = "^2.2.0"
requests = "^2.28.1"
ruff = "^0.14.6"
isort = "^7.0.0"
pyright = "1.1.407"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
pyright = "^1.1.400"
django-stubs = "^5.2.0"

[tool.isort]
profile = "black"

[tool.pyright]
include = ["src/*"]
exclude = [
    "README.md",
    ".venv"
]
stubPath = ""

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-safe-fixes = ["I"]
extend-select = ["I"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
split-on-trailing-comma = true
combine-as-imports = true
known-third-party = ["django","django.contrib","django.utils"]

# [virtualenvs]
# create = true
# in-project = true
# path = ".poetry_venv"
