[build-system]
requires = ["poetry-core==2.3.2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[project]
name = "prison-book-project"
version = "0.1.0"
description = ""
authors = [{name = "ges-na", email = "gesinaface@gmail.com"}]
requires-python = ">=3.12,<4.0"
dependencies = [
"django-environ==0.13.0",
"Django==5.2.12",
"django-extensions==4.1",
"django-import-export==2.8.0",
"psycopg2-binary==2.9.11",
"model-bakery==1.23.4",
"django-cors-headers==4.9.0",
"whitenoise==6.12.0",
"gunicorn==25.3.0",
"django-ajax-selects==3.0.3",
"requests==2.33.0",
"django-registration (>=5.2.1,<6.0.0)",
"urllib3 (==2.7.0)"]

[dependency-groups]
dev = [
"pyright>=1.1.400",
"django-stubs==5.2.9",
"django-stubs-ext==5.2.9",
"ipdb==0.13.13",
"isort>=7.0.0",
"pyright>=1.1.407",
"ruff==0.15.14",
"typing-extensions==4.15.0"]

[project.group.dev]
optional = true

[tool.isort]
profile = "black"

[tool.pyright]
include = ["src/*"]
exclude = [
    "README.md",
    ".venv"
]
stubPath = ""

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-safe-fixes = ["I"]
extend-select = ["I"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
split-on-trailing-comma = true
combine-as-imports = true
known-third-party = ["django","django.contrib","django.utils"]

# [virtualenvs]
# create = true
# in-project = true
# path = ".poetry_venv"
